data/derived/comb/progs/unify/prog5503.ml.out
Characters 92-96:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type 'a -> 'b
       but an expression was expected of type 'b
       The type variable 'b occurs inside 'a -> 'b
